Fixed  #4244 - Popup z-index issue on calendar

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -3169,7 +3169,7 @@ table#lineItems tr td table tfoot tr td span {
 }
 
 .modal {
-  z-index: 16000;
+  z-index: 1041;
 }
 
 .detail-view-row .label.col-2-label {
